ajout css titre header + ajout fonts

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -9,3 +9,9 @@
 .logo-header {
     margin-left: 10px;
 }
+.titre-header {
+    color: white;
+    font-family: 'TorukSC', sans-serif;
+    text-decoration: none;
+    margin-top: 35px;
+}
