--- a/src/css/header.css
+++ b/src/css/header.css
@@ -3,7 +3,7 @@
     justify-content: space-between;
     align-items: center;
     height: 80px;
-    width: 375px;
+    width: auto;
     background-color: #02548A;
 }
 .logo-header {
