--- a/src/css/main.css
+++ b/src/css/main.css
@@ -38,3 +38,25 @@ p {
     margin-right: auto;
     margin-bottom: 15px;
 }
+.titre-3 {
+    font-family: 'TorukSC', Arial, sans-serif;
+    font-size: 24px;
+    display: flex;
+    justify-content: center;
+}
+.btn-plus {
+    padding: 5px 50px;
+    border-radius: 10px;
+    text-decoration: none;
+    color: #ffffff;
+    background-color: #02548A;
+    width: 80px;
+    height: 30px;
+    font-size: 18px;
+    justify-content: center;
+    align-items: center;
+    font-style: Arial;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 15px;
+}
