--- a/src/css/main.css
+++ b/src/css/main.css
@@ -60,3 +60,9 @@ p {
     margin-right: auto;
     padding-top: 15px;
 }
+.img-cover {
+    width: 50%;
+    height: 50%;
+    margin-left: auto;
+    margin-right: auto;
+}
