--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7,6 +7,8 @@ img {
 p {
     font-family: Arial, sans-serif;
     font-size: 16px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 .titre-1 {
     font-size: 75px;
@@ -69,4 +71,10 @@ p {
 .ligne-accueil {
     margin-left: 10px;
     margin-right: 10px;
+}
+body {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+    font-size: 16px;
 }
