--- a/src/css/main.css
+++ b/src/css/main.css
@@ -117,3 +117,8 @@ body {
     margin-top: 20px;
     margin-bottom: 20px;
 }
+.img-articles {
+    margin-left: 10px;
+    margin-right: 10px;
+    max-width: 95%;
+}
