--- a/src/css/main.css
+++ b/src/css/main.css
@@ -78,7 +78,7 @@ body {
     font-family: Arial, sans-serif;
     font-size: 16px;
 }
-.citation-2 {
+.titre-4 {
     font-family: 'TorukSC', sans-serif;
     font-size: 22px;
     color: black;
