--- a/src/css/main.css
+++ b/src/css/main.css
@@ -122,3 +122,13 @@ body {
     margin-right: 10px;
     max-width: 95%;
 }
+.titre-4-bis {
+    font-family: 'TorukSC', sans-serif;
+    font-size: 22px;
+    color: black;
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+.video {
+    display: flex;
+}
