--- a/src/css/main.css
+++ b/src/css/main.css
@@ -137,3 +137,10 @@ body {
     margin-left: 15px;
     margin-bottom: 15px;
 }
+.section-1-2 {
+    margin-bottom: 20px;
+}
+.p1 {
+    margin-bottom: 10px;
+    margin-top: 40px;
+}
