--- a/src/css/main.css
+++ b/src/css/main.css
@@ -144,3 +144,11 @@ body {
     margin-bottom: 10px;
     margin-top: 40px;
 }
+.img-avatar {
+    width: 75%;
+    height: 75%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 25px;
+    margin-bottom: 25px;
+}
