--- a/src/css/404.css
+++ b/src/css/404.css
@@ -1,15 +1,15 @@
 .body-404 {
-    display: flex;
     font-family: Arial, sans-serif;
     text-align: center;
     justify-content: center;
   }
   h1 {
-    font-size: 36px;
+    font-size: 50px;
     margin-bottom: 20px;
+    margin-top: 50px;
   }
   p {
-    font-size: 18px;
+    font-size: 20px;
     margin-bottom: 30px;
   }
   a {
