--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -27,12 +27,25 @@ a {
     height: 2px;
     position: absolute;
     left: 0;
+    transition: all .4s ease-in-out;
 }
 .nav-toggle-bar::before {
     top: -10px;
 }
 .nav-toggle-bar::after {
     top: 10px;
+}
+
+.menu-open .nav-toggle-bar {
+    transform: rotate(135deg);
+    background-color: white;
+}
+
+.menu-open .nav-toggle-bar::before,
+.menu-open .nav-toggle-bar::after {
+    transform: rotate(90deg);
+    background-color: white;
+    top: 0;
 }
 
 .menu {
@@ -47,7 +60,7 @@ a {
     align-items: center;
     justify-content: center;
     transform: translateX(100vw);
-    transition: all 1s;
+    transition: all .4s;
     z-index: 1;
 }
 .menu-open .menu {
@@ -61,7 +74,28 @@ a {
 }
 .menu li {
     margin-bottom: 30px;
+    transform: translateX(30px);
+    opacity: 0;
+    transition: all .4s ease;
 }
 .menu a {
     color: white;
 }
+.menu-open,
+.menu-open body {
+    overflow: hidden;
+}
+
+.menu-open .menu li {
+    transform: translateX(0);
+    opacity: 1;
+}
+.menu-open .menu li:nth-child(n+1) { transition-delay: .3s;}
+.menu-open .menu li:nth-child(n+2) { transition-delay: .35s;}
+.menu-open .menu li:nth-child(n+3) { transition-delay: .40s;}
+.menu-open .menu li:nth-child(n+4) { transition-delay: .45s;}
+.menu-open .menu li:nth-child(n+5) { transition-delay: .50s;}
+.menu-open .menu li:nth-child(n+6) { transition-delay: .55s;}
+.menu-open .menu li:nth-child(n+7) { transition-delay: .60s;}
+.menu-open .menu li:nth-child(n+8) { transition-delay: .65s;}
+.menu-open .menu li:nth-child(n+9) { transition-delay: .70s;}
