--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,10 +1,10 @@
 .header {
     display: flex;
-    justify-content: space-between;
     align-items: center;
     height: 80px;
     width: auto;
     background-color: #02548A;
+    justify-content: space-between;
 }
 .logo-header {
     margin-left: 15px;
@@ -13,8 +13,8 @@
     color: white;
     font-family: 'TorukSC', sans-serif;
     text-decoration: none;
-    margin-top: 35px;
+    margin-top: 50px;
 }
 .menu-header {
-    margin-right: 15px;
+    padding: 15px;
 }
