--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -22,7 +22,7 @@ a {
 .nav-toggle-bar::before,
 .nav-toggle-bar::after {
     content: "";
-    background-color: black;
+    background-color: white;
     width: 100%;
     height: 2px;
     position: absolute;
@@ -99,3 +99,11 @@ a {
 .menu-open .menu li:nth-child(n+7) { transition-delay: .60s;}
 .menu-open .menu li:nth-child(n+8) { transition-delay: .65s;}
 .menu-open .menu li:nth-child(n+9) { transition-delay: .70s;}
+
+.flag {
+    width: 67px;
+    height: 40px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+}
