modiications page contact

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -152,3 +152,36 @@ body {
     margin-top: 25px;
     margin-bottom: 25px;
 }
+.formulaire {
+    width: 90%;
+    padding: 50px;
+    font-size: 16px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    margin-left: 10px;
+}
+.btn-formulaire {
+    background-color: #02548A;
+    color: #ffffff;
+    border-radius: 5px;
+    padding: 4px 8px;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+}
+.nom-formulaire {
+    font-family: 'Inter', normal;
+    font-size: 14px;
+    padding: 20px;
+    text-transform: uppercase;
+    display: flex;
+    align-items: center; /* pour aligner verticalement différents de justify-content qui aligne horizontalement */
+}
+.section-formulaire {
+    margin: 25px;
+    margin-bottom: 25px;
+}
+.msg-formulaire {
+    margin-left: 25px;
+}
