--- a/src/css/header.css
+++ b/src/css/header.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     height: 80px;
-    width: auto;
+    width: 100%;
     background-color: #02548A;
     justify-content: space-between;
 }
